basic d3 dom manipulation

--- a/index.html
+++ b/index.html
@@ -10,8 +10,24 @@
 
 <body>
 
+  <h2 id="d3-test">Testing D3</h2>
+  <p>Hey there, i'm using d3 xD</p>
+
+
+  <h4>D3 is cool</h4>
+  <p>gonna built cool charts and stuff.....</p>
+  <p>gonna built cool charts and stuff.....</p>
+  <p>gonna built cool charts and stuff.....</p>
+  <p>gonna built cool charts and stuff.....</p>
+  <p>gonna built cool charts and stuff.....</p>
+
+  <form>
+    <input type="text" placeholder="testing">
+    <input type="submit" value="Submit">
+  </form>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
