--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
 
-  <h2 id="d3-test">Testing D3</h2>
+  <!-- <h2 id="d3-test">Testing D3</h2>
   <p>Hey there, i'm using d3 xD</p>
 
 
@@ -24,7 +25,22 @@
   <form>
     <input type="text" placeholder="testing">
     <input type="submit" value="Submit">
-  </form>
+  </form> -->
+
+  <svg>
+    <g stroke="red" stroke-width="5px">
+      <line x1="100" y1="100" x2="700" y2="350" />
+      <line x1="100" y1="350" x2="700" y2="100" />
+    </g>
+  </svg>
+
+  <svg>
+    <rect  x="50" y="50" width="300" height="200" fill="#555" stroke-width="10px" stroke="red" />
+
+    <rect  x="100" y="200" width="300" height="400" fill="#555" stroke-width="10px" stroke="red" />
+
+    <circle cx="400" cy="250" r="60" fill="yellow" />
+  </svg>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.9.2/d3.js"></script>
   <script src="index.js"></script>
